bitbucket-helm/templates/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: bitbucket
  labels:
    app: bitbucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bitbucket
    spec:
      containers:
        - name: bitbucket
          image: >-
            image-registry.openshift-image-registry.svc:5000/bitbucket/bitbucket:latest
          ports:
            - name: http
              containerPort: 7990
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: bitbucket-data
              mountPath: /var/atlassian/application-data/bitbucket
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: bitbucket-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
  serviceName: bitbucket
