bitbucket-helm/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bitbucket
spec:
  to:
    kind: Service
    name: bitbucket
    weight: 100
  port:
    targetPort: 7990
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
